--- a/public/index.html
+++ b/public/index.html
@@ -139,9 +139,12 @@
 <body>
   <div id="root"></div>
 
+  <!-- Load Environment Configuration -->
+  <script src="../config.js"></script>
+
   <!-- Load API Services -->
   <script src="./src/services/api.js"></script>
-  
+
   <!-- Load UI Components -->
   <script src="./src/components/ui/Button.js"></script>
   <script src="./src/components/ui/Header.js"></script>
