shifted older ec2 to another ec2 machine

--- a/public/index.html
+++ b/public/index.html
@@ -139,11 +139,11 @@
 <body>
   <div id="root"></div>
 
-  <!-- Load Environment Configuration -->
-  <script src="../config.js"></script>
+  <!-- Load Environment Configuration with cache busting -->
+  <script src="./config.js?v=2025-10-07"></script>
 
   <!-- Load API Services -->
-  <script src="./src/services/api.js"></script>
+  <script src="./src/services/api.js?v=2025-10-07"></script>
 
   <!-- Load UI Components -->
   <script src="./src/components/ui/Button.js"></script>
