--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scholarport - Find Your Perfect University</title>
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="16x16" href="/image/favicon-16x16.png">
+  <link rel="icon" type="image/png" href="/image/favicon-16x16.png">
+  <link rel="shortcut icon" href="/image/favicon-16x16.png">
+  <link rel="apple-touch-icon" href="/image/favicon-16x16.png">
+
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   
