--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  
+
 
   <!-- Tailwind Configuration -->
   <script>
@@ -74,7 +74,9 @@
 
   <!-- Google Fonts -->
   <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&family=Work+Sans:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
 
 
   <!-- Lucide Icons CDN -->
@@ -130,11 +132,21 @@
     ::-webkit-scrollbar {
       width: 8px;
     }
-    h1, h2, h3, h4, h5, h6 {
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
       font-family: 'Manrope', sans-serif;
       font-weight: 700;
     }
-    p, span, li, a {
+
+    p,
+    span,
+    li,
+    a {
       font-family: 'Work Sans', sans-serif;
     }
 
