--- a/public/index.html
+++ b/public/index.html
@@ -170,19 +170,19 @@
   <div id="root"></div>
 
   <!-- Load Environment Configuration with cache busting -->
-  <script src="./config.js?v=2025-10-07"></script>
+  <script src="./config.js?v=2025-12-23"></script>
 
   <!-- Load API Services -->
-  <script src="./src/services/api.js?v=2025-10-07"></script>
+  <script src="./src/services/api.js?v=2025-12-23"></script>
 
   <!-- Load UI Components -->
-  <script src="./src/components/ui/Button.js"></script>
-  <script src="./src/components/ui/Header.js"></script>
-  <script src="./src/components/ui/Footer.js"></script>
-  <script src="./src/components/ui/Components.js"></script>
+  <script src="./src/components/ui/Button.js?v=2025-12-23"></script>
+  <script src="./src/components/ui/Header.js?v=2025-12-23"></script>
+  <script src="./src/components/ui/Footer.js?v=2025-12-23"></script>
+  <script src="./src/components/ui/Components.js?v=2025-12-23"></script>
 
   <!-- Load the React application -->
-  <script src="./src/main.js"></script>
+  <script src="./src/main.js?v=2025-12-23"></script>
 </body>
 
 </html>
